# magmas

./: README.md
src/franka_control_inrol/: CMakeLists.txt  franka_control_inrol_plugin.xml  package.xml
src/franka_control_inrol/cfg/: compliance_param.cfg  desired_mass_param.cfg
src/franka_control_inrol/config/: franka_control_inrol.yaml
src/franka_control_inrol/include/franka_control_inrol/: cartesian_pose_controller.h  impedance_controller_6DOF.h  inrol_impedance_controller.h  inrol_peg_in_hole.h  parameter_identification.h  path_generator.h
src/franka_control_inrol/launch/: cartesian_pose_controller.launch  ft_sensor.launch  impedance_controller_6DOF.launch  impedance_controller_wo_FT.launch  inrol_impedance_controller.launch  inrol_peg_in_hole.launch  parameter_identification.launch  path_generator.launch
src/franka_control_inrol/msg/: JointPkg.msg  TorquePkg.msg  Vector6.msg
src/franka_control_inrol/src/: cartesian_pose_controller.cpp  impedance_controller_6DOF.cpp  inrol_impedance_controller.cpp  inrol_peg_in_hole.cpp  netft_rdt_driver.cpp  parameter_identification.cpp  path_generator.cpp  peg_in_hole_planning.cpp  txt_out.cpp
